--- a/package.json
+++ b/package.json
@@ -9,17 +9,23 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@apollo/client": "^3.6.4",
+		"@nextui-org/react": "^1.0.0-beta.7",
 		"eslint-config-prettier": "^8.5.0",
+		"graphql": "^16.5.0",
 		"next": "12.1.6",
 		"react": "18.1.0",
 		"react-dom": "18.1.0"
 	},
 	"devDependencies": {
+		"@testing-library/jest-dom": "^5.16.4",
+		"@testing-library/react": "^13.2.0",
 		"@types/node": "17.0.35",
 		"@types/react": "18.0.9",
 		"@types/react-dom": "18.0.4",
 		"eslint": "8.15.0",
 		"eslint-config-next": "12.1.6",
+		"jest": "^28.1.0",
 		"prettier": "^2.6.2",
 		"typescript": "4.6.4"
 	}
